tests/bad/bad-mod-type.ris
void main():
    print 42 % true;
    return;